--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "pg": "^8.16.3",
     "typeorm": "^0.3.25",
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
     "express": "^5.1.0",
