--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "typeorm": "^0.3.25",
     "zod": "^4.0.17"
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
     "express": "^5.1.0",
     "reflect-metadata": "^0.2.2",
